# Simple-Rpi-Gui

./: .gitignore  Protocol_api.txt  README.md
client/: CMakeLists.txt  Makefile  win_make.bat
client/src/: main.cpp  main.hpp
client/src/gui/: connection.cpp  connection.h  connection.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  settingspage.cpp  settingspage.h  settingspage.ui
client/src/gui/live/: audioiodevice.cpp  audioiodevice.h  dynamicinput.cpp  dynamicinput.h  dynamicinput.ui  dynamicoutput.cpp  dynamicoutput.h  dynamicoutput.ui  gpiosettingdialog.cpp  gpiosettingdialog.h  modeaudiolive.cpp  modeaudiolive.h  modelive.cpp  modelive.h
client/src/gui/live/dialog/: gpiosettingdialog.cpp  gpiosettingdialog.h  gpiosettingdialog.ui
client/src/openssl_wrapper/: OpensslWrapper.cpp  OpensslWrapper.hpp
client/src/syscall/: Systemcall.hpp
client/src/syscall/linux/: Systemcall.cpp
client/src/syscall/windows/: Systemcall.cpp
client/src/tools/: serverApi.cpp  serverApi.hpp  settingsmanager.cpp  settingsmanager.hpp  tools.cpp  tools.h
doc/: BUILD.md
server/: Makefile
server/src/: MainServer.cpp  MainServer.hpp  main.cpp  main.hpp  serv_test.cpp  serv_test.hpp
server/src/gpio/: IGpioWrapper.hpp
server/src/gpio/rpi/: GpioWrapper.cpp  GpioWrapper.hpp
server/src/gpio/test/: GpioWrapper.cpp  GpioWrapper.hpp
server/src/live/: LiveMode.cpp  LiveMode.hpp  LivePin.cpp  LivePin.hpp
server/src/openssl_wrapper/: OpensslWrapper.cpp
shared_src/socket/: ASocket.hpp  ISocket.hpp  OpensslWrapper.cpp  OpensslWrapper.hpp
shared_src/socket/linux/: Socket.cpp  Socket.hpp
shared_src/socket/windows/: Socket.cpp  Socket.hpp
